Navbar issue on mobile-xs fixed

--- a/src/scss/components/_navigation.scss
+++ b/src/scss/components/_navigation.scss
@@ -1,14 +1,9 @@
 /*=== MEDIA QUERY MIXINS ===*/
 @import '../variables.scss';
 
-@mixin mobile-xs {
-  @media (max-width: 400px) {
-    @content;
-  }
-}
 
 @mixin mobile {
-  @media (max-width: 575px) {
+  @media (max-width: 375px) {
     @content;
   }
 }
